--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@tanstack/react-query": "^5.90.16",
     "@vercel/analytics": "^1.6.1",
     "ai": "^6.0.25",
     "class-variance-authority": "^0.7.1",
@@ -32,6 +33,8 @@
     "next": "16.1.1",
     "next-auth": "^5.0.0-beta.30",
     "nodemailer": "^7.0.12",
+    "pdf-compressor": "^1.0.5",
+    "pdf-lib": "^1.17.1",
     "postgres": "^3.4.8",
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
